[tool.poetry]
name = "acached"
version = "0.1.0"
description = "Cache for syncronous and asyncrounous functions"
authors = ["qwlions <qwlions@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
